<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Class 2b</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Black_Button">Black</string>
    <string name="Button_White">White</string>
    <string name="White_Button">White</string>
    <string name="Red_Button">Red</string>
    <string name="Green_Button">Green</string>
    <string name="Blue_Button">Blue</string>

</resources>
